@@ -1,3 +1,4 @@
+8/22/11 fix test program for EN sliders, change snap interval to 0.2
 8/22/11 change bond color to dark gray, so that partial charges are still visible when they overlap bonds
 8/22/11 position partial charge opposite molecular dipole for atom B in triatomic molecule
 8/22/11 add view of partial charge for atom B in triatomic molecule (location is incorrect)
